--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/propertiesmanagementdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://ec2-3-82-198-36.compute-1.amazonaws.com:3306/properties?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=admin
 spring.datasource.password=Nbf_19082003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+
+server.port=8080
