--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 
-server.port=8080
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/springkey.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=19082003
+# The alias mapped to the certificate
+server.ssl.key-alias=springkey
+server.ssl.enabled=true
+
+server.port=8443
