Ya estan desplegados back y front, el login funciona ya

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.format_sql=false
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/springkey.p12
+#server.ssl.key-store=/home/ubuntu/springkey.p12
 # The password used to generate the certificate
 server.ssl.key-store-password=19082003
 # The alias mapped to the certificate
